<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mhi_test</name>
  <version>0.0.1</version>
  <description>Testing cpu usage by number of nodes</description>
  <maintainer email="adachi@concurrent-rt.co.jp">Kazuki Adachi</maintainer>
  <license>Proprietary</license>

  <depend>rclcpp</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
