<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pingpong</name>
  <version>0.0.1</version>
  <description>Simple ping/pong nodes</description>
  <maintainer email="que.sais.je030@gmail.com">liqsuq</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!--<depend>pingpong_interfaces</depend>-->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
